REF change copyOnWriteArrayList to concurrentLinkedQueue